<resources>
    <string name="app_name">Contacts App</string>
    <!--region Home-->
    <string name="home_go_to_add_button">Add Contact</string>
    <!--endregion-->

    <!--region Add Contact-->
    <string name="contact_add_label">Add Contact</string>
    <string name="contact_add_photo_label">Photo Url</string>
    <string name="contact_add_name_label">Name</string>
    <string name="contact_add_last_name_label">Last Name</string>
    <string name="contact_add_genre_label">Genre</string>
    <string name="contact_add_age_label">Age</string>
    <string name="contact_add_button">Add Contact</string>
    <!--endregion-->
</resources>